--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>ELBII</title>
+	<link href='css/bootstrap.min.css' rel='stylesheet'>
+</head
+<body>
+	<div id="top" class="container">
+		<h2 class="location-label">Nashville, Tennessee</h2>
+		<div class="img-src" style="background-image: url("img/Vandy/bg-blur.png");"></div>
+		<div class="vert-text">
+			<img class="dp" src="./img/dp.png">
+			<br>
+			<h1>Ellis Brown</h1>
+			<p class="lead">Hi! I'm Ellis Brown.</p>
+			<ul class="list-inline">
+				<li> <a title="Facebook" class="icon" href="http://www.fb.co/ellis.langham.brown.ii" target="_blank"><i class="fa fa-facebook fa-3x"></i> </a></li>
+				<li><a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/ellislbrownii" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a></li>
+				<li><a title="GitHub" class="icon" href="https://github.com/ellisbrown" target="_blank"><i class="fa fa-github fa-3x"></i></a></li>
+				<li><a title="GitLab" class="icon" href="https://gitlab.com/u/ellis-l-brown" target="_blank"><i class="fa fa-github fa-3x"></i></a></li>
+				<li><a title="Google+" class="icon" href="https://plus.google.com/+EllisBrownII" target="_blank"><i class="fa fa-google-plus fa-3x"></i></a></li>
+				<li><a title="Email" class="icon" href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank" data-toggle="tooltip"><i class="fa fa-envelope fa-3x"></i></a></li>
+			</ul>
+		</div>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src='js/bootstrap.min.js'></script>
+</body>
+</html>
