--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 					<li><a title="Email" class="icon" href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank" data-toggle="tooltip">Email<i class="fa fa-envelope fa-3x"></i></a></li>
 				</ul>
 			</p>
+			<p>
+				<a title="Networks Final Project" href="https://github.com/ellisbrown/NetworksFinal">Networked Search Engine</a>
+			</p>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
