--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 					<li><a title="Email" class="icon" href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank" data-toggle="tooltip">Email<i class="fa fa-envelope fa-3x"></i></a></li>
 				</ul>
 			</p>
+			<h2>Projects</h2>
 			<p>
-				<a title="Networks Final Project" href="https://github.com/ellisbrown/NetworksFinal">Networked Search Engine</a>
+				<ul>
+					<li><a title="Networks Final Project" href="https://github.com/ellisbrown/NetworksFinal">Networked Search Engine</a></li>
+				</ul>
 			</p>
 		</div>
 	</div>
