--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			<p>
 				<ul>
 					<li><a title="Networks Final Project" href="https://github.com/ellisbrown/NetworksFinal">Networked Search Engine</a></li>
+					<li><a title="BigData Final Project" href="https://github.com/dcarr45/FinanceML">Finance Machine Learning</a></li>
+
 				</ul>
 			</p>
 		</div>
