--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Theme</title>
+    <title>Ellis Brown</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+                <a href="#top" onclick=$("#menu-close").click();>Ellis Brown</a>
             </li>
             <li>
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
@@ -47,10 +47,7 @@
                 <a href="#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Services</a>
-            </li>
-            <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
+                <a href="#resume" onclick=$("#menu-close").click();>Resume</a>
             </li>
             <li>
                 <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
@@ -61,10 +58,29 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
+            <img class="dp" src="./img/cay17.jpg">
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <h1>Ellis Brown</h1>
+            <h3>AI Research @ Vandy</h3>
+            <br>
+            <ul class="list-inline social-media">
+                <li><a class="icon" href="http://www.fb.me/ellis.l.brown.ii" target="_blank"
+                       data-original-title="Facebook"> <i class="fa fa-facebook fa-3x"></i> </a></li>
+                <li><a class="icon" href="https://twitter.com/ellisorellis" target="_blank"
+                       data-original-title="Twitter"> <i class="fa fa-twitter fa-3x"></i> </a></li>
+                <li><a class="icon" href="http://www.linkedin.com/in/ellislbrownii" target="_blank"
+                       data-original-title="LinkedIn"> <i class="fa fa-linkedin fa-3x"></i> </a></li>
+                <li><a class="icon" href="https://github.com/ellisbrown" target="_blank"
+                       data-original-title="Github"> <i class="fa fa-github fa-3x"></i> </a></li>
+                <li><a class="icon" href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank" data-toggle="tooltip"
+                       data-original-title="Email"> <i class="fa fa-envelope fa-3x"></i> </a></li>
+            </ul>
+            <br>
+            <br>
+            <a href="#about" class="btn btn-dark btn-lg"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+        </div>
+        <div id="location-bar">
+            <h2 class="location-label">Nashville, TN</h2>
         </div>
     </header>
 
@@ -72,81 +88,43 @@
     <section id="about" class="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                    <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                <div class="col-xs-2 "></div>
+                <div class="col-xs-8 text-center">
+                    <h2><i class="fa fa-user fa-4x"></i></h2>
                 </div>
+                <div class="col-xs-2"></div>
             </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Our Services</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Service Name</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Service Name</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Service Name</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Service Name</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
+            <div class="row">
+                <div class="col-xs-2 position">
+                    <h3><i class="fa fa-university fa-4x" aria-hidden="true"></i></h3>
                 </div>
-                <!-- /.col-lg-10 -->
+                <div class="col-xs-8 text-center">
+                    <p class="lead">
+                        I've been an Undergraduate Researcher in the <a href="https://my.vanderbilt.edu/aivaslab/">AIVAS Lab</a> since January 2017 working on <a href="http://whatis.techtarget.com/definition/cognitive-modeling">Cognitive Systems Models</a> of <a href="https://en.wikipedia.org/wiki/Salience_(neuroscience)">Information Salience</a> under <a href="https://www.technologyreview.com/lists/innovators-under-35/2016/visionary/maithilee-kunda/">Dr. Maithilee Kunda</a>.
+                        <br>
+                        <br>
+                        I will graduate from <a href="http://www.vanderbilt.edu/">Vanderbilt University</a> in May 2017 with a Bachelors of Science in <a href="https://engineering.vanderbilt.edu/eecs/Undergraduate/index.php">Computer Science</a> and a Bachelor of Arts in <a href="https://as.vanderbilt.edu/math/">Mathematics</a>.
+                    </p>
+                    <br>
+                    <br>
+                </div>
+                <div class="col-xs-2"></div>
+            </div>
+            <div class="row">
+                <hr class="small">
+                <div class="col-xs-2 position">
+                    <h3><i class="fa fa-briefcase fa-4x" aria-hidden="true"></i></h3>
+                </div>
+                <div class="col-xs-8 text-center">
+                    <p class="lead">
+                        I have worked on <a href="https://opensource.org/definition">open source</a> <a href="https://en.wikipedia.org/wiki/Deep_learning">Deep Learning</a> projects in my free-time this year that have gotten some good recognition — most notably a <b><a href="https://github.com/amdegroot/ssd.pytorch">PyTorch Implementation</a></b> of the <a href="http://arxiv.org/abs/1512.02325">Single Shot MultiBox Detector</a>.
+                        <br>
+                        <br>
+                        I spent last summer interning at <a href="https://www.blackrock.com/">Blackrock</a> working as a <a href="https://www.sitepoint.com/full-stack-developer/">Full-Stack web developer</a>.  My <a href="http://rockthecode.io/tag/hackathon/">Hackathon</a> team won the summer competition with an <a href="https://en.wikipedia.org/wiki/Machine_learning">ML</a> system to process <a href="http://blog.aylien.com/structured-vs-unstructured-data-exploring-an/">unstructured data</a> at <a href="https://en.wikipedia.org/wiki/Scalability">scale</a> (like legal documents).
+                    </p>
+                    <a href="#resume" class="btn btn-dark btn-lg"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                </div>
+                <div class="col-xs-2"></div>
             </div>
             <!-- /.row -->
         </div>
@@ -154,109 +132,53 @@
     </section>
 
     <!-- Callout -->
-    <aside class="callout">
+    <aside id="resume" class="callout resume">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <h1>And here's my resume.</h1>
+            <br>
+            <br>
+            <br>
+            <a href="resume/ELB%20Resume%2020170322.pdf" class="btn btn-lg" target="_blank">
+                <i class="fa fa-download fa-5x"></i>
+            </a>
         </div>
     </aside>
-
-    <!-- Portfolio -->
-    <section id="portfolio" class="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Our Work</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Call to Action -->
-    <aside class="call-to-action bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
-                </div>
-            </div>
-        </div>
-    </aside>
-
-    <!-- Map -->
-    <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-        <br />
-        <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-        </small>
-    </section>
 
     <!-- Footer -->
-    <footer>
+    <footer id="contact" class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
+                <div class="col-xs-4 col-xs-offset-4 text-center">
+                    <h4><strong>Ellis Brown</strong>
                     </h4>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
-                        </li>
+                    <p>PMB 350914
+                        <br>2301 Vanderbilt Pl
+                        <br>Nasvhille, TN 37235</p>
+                <!--</div>-->
+                <!--<div class="col-xs-4 col-xs-offset-5 text-left">-->
+                    <ul class="list-unstyled text">
+                        <!--<a href="tel:+13147611662"><li><i class="fa fa-phone fa-fw"></i> +1 (314) 761-1662</li></a>-->
+                        <a href="mailto:elbrown47@gmail.com"><li><i class="fa fa-google fa-fw"></i> elbrown47@gmail.com</a></li>
+                        <a href="mailto:ellis.l.brown@vanderbilt.edu"><li><i class="fa fa-envelope fa-fw"></i> ellis.l.brown@vanderbilt.edu</a></li>
                     </ul>
-                    <br>
+                <!--</div>-->
+                <!--<div class="col-xs-4 col-xs-offset-4 text-center">-->
                     <ul class="list-inline">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
-                        </li>
+                        <li><a class="icon" href="http://www.fb.me/ellis.l.brown.ii" target="_blank"
+                               data-original-title="Facebook"> <i class="fa fa-facebook fa-3x"></i> </a></li>
+                        <li><a class="icon" href="http://www.instagram.com/ellisorellis" target="_blank"
+                               data-original-title="Instagram"> <i class="fa fa-instagram fa-3x"></i> </a></li>
+                        <li><a class="icon" href="http://twitter.com/ellisorellis" target="_blank"
+                               data-original-title="Twitter"> <i class="fa fa-twitter fa-3x"></i> </a></li>
+                        <li><a class="icon" href="http://soundcloud.com/langham" target="_blank"
+                               data-original-title="SoundCloud"> <i class="fa fa-soundcloud fa-3x"></i> </a></li>
+                        <li><a class="icon" href="http://www.linkedin.com/in/ellislbrownii" target="_blank"
+                               data-original-title="LinkedIn"> <i class="fa fa-linkedin fa-3x"></i> </a></li>
+                        <li><a class="icon" href="http://github.com/ellisbrown" target="_blank"
+                               data-original-title="Github"> <i class="fa fa-github fa-3x"></i> </a></li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="lead">Copyright &copy; Ellis L. Brown II, 2017</p>
                 </div>
             </div>
         </div>
@@ -321,26 +243,6 @@
             }
         }
     });
-    // Disable Google Maps scrolling
-    // See http://stackoverflow.com/a/25904582/1607849
-    // Disable scroll zooming and bind back the click event
-    var onMapMouseleaveHandler = function(event) {
-        var that = $(this);
-        that.on('click', onMapClickHandler);
-        that.off('mouseleave', onMapMouseleaveHandler);
-        that.find('iframe').css("pointer-events", "none");
-    }
-    var onMapClickHandler = function(event) {
-            var that = $(this);
-            // Disable the click handler until the user leaves the map area
-            that.off('click', onMapClickHandler);
-            // Enable scrolling zoom
-            that.find('iframe').css("pointer-events", "auto");
-            // Handle the mouse leave event
-            that.on('mouseleave', onMapMouseleaveHandler);
-        }
-        // Enable map zooming with mouse scroll when the user clicks the map
-    $('.map').on('click', onMapClickHandler);
     </script>
 
 </body>
