--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img class="dp" src="./img/cay17.jpg">
         <br>
         <h1>Ellis Brown</h1>
-        <h3>AI Research @ Vandy</h3>
+        <h3>Software Engineer @ BlackRock | Artificial Intelligence Research @ AIVAS Lab</h3>
         <br>
         <ul class="list-inline social-media">
             <li><a class="icon" href="http://www.fb.me/ellis.l.brown.ii" target="_blank"
@@ -74,7 +74,7 @@
                    data-original-title="LinkedIn"> <i class="fa fa-linkedin fa-3x"></i> </a></li>
             <li><a class="icon" href="https://github.com/ellisbrown" target="_blank"
                    data-original-title="Github"> <i class="fa fa-github fa-3x"></i> </a></li>
-            <li><a class="icon" href="mailto:ellis.l.brown@vanderbilt.edu" target="_blank" data-toggle="tooltip"
+            <li><a class="icon" href="mailto:ellis.l.brown.ii@gmail.com" target="_blank" data-toggle="tooltip"
                    data-original-title="Email"> <i class="fa fa-envelope fa-3x"></i> </a></li>
         </ul>
         <br>
@@ -176,8 +176,8 @@
                 <!--<div class="col-xs-4 col-xs-offset-5 text-left">-->
                 <ul class="list-unstyled text">
                     <!--<a href="tel:+13147611662"><li><i class="fa fa-phone fa-fw"></i> +1 (314) 761-1662</li></a>-->
-                    <a href="mailto:elbrown47@gmail.com">
-                        <li><i class="fa fa-google fa-fw"></i> elbrown47@gmail.com
+                    <a href="mailto:ellis.l.brown.ii@gmail.com">
+                        <li><i class="fa fa-google fa-fw"></i> ellis.l.brown.ii@gmail.com
                     </a></li>
                     <a href="mailto:ellis.l.brown@vanderbilt.edu">
                         <li><i class="fa fa-envelope fa-fw"></i> ellis.l.brown@vanderbilt.edu
