--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <a href="#about" class="btn btn-dark btn-lg"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
     </div>
     <div id="location-bar">
-        <h2 class="location-label">Nashville, TN</h2>
+        <h2 class="location-label">New York, NY</h2>
     </div>
 </header>
 
@@ -102,15 +102,23 @@
             </div>
             <div class="col-xs-8 text-center">
                 <p class="lead">
-                    I've been an Undergraduate Researcher in the <a href="https://my.vanderbilt.edu/aivaslab/">AIVAS
-                    Lab</a> since January 2017 working on <a
-                        href="http://whatis.techtarget.com/definition/cognitive-modeling">Cognitive Systems Models</a>
-                    of <a href="https://en.wikipedia.org/wiki/Salience_(neuroscience)">Information Salience</a> under <a
-                        href="https://www.technologyreview.com/lists/innovators-under-35/2016/visionary/maithilee-kunda/">Dr.
-                    Maithilee Kunda</a>.
+                    I am a Software Engineer with experience in Research and Open Source development. I am interested in
+                    Artificial Intelligence and practical applications of Deep Learning (especially in R&D).
                     <br>
                     <br>
-                    I will graduate from <a href="http://www.vanderbilt.edu/">Vanderbilt University</a> in May 2017 with
+                    In my final semester at Vanderbilt, my AI professor at the time,
+                    <a href="https://my.vanderbilt.edu/mkunda/">Dr. Maithilee Kunda</a>, invited me to join her
+                    newly formed <a href="https://my.vanderbilt.edu/aivaslab/">Artificial Intelligence and Visual
+                    Analog Systems Research Lab</a>. I was the lead researcher all Spring on a NSF funded project at the
+                    intersection of Cognitive Science and Artificial Intelligence. Since graduation, I have continued work
+                    on the project, and am a lead author on our paper being submitted to
+                    <a href="https://aaai.org/Conferences/AAAI/aaai18.php">AAAI-18</a> entitled "A New Computational
+                    Cognitive Architecture to Model Human Visual Search for Spatiotemporal Targets." In addition, I will
+                    give an oral presentation of my research at the
+                    <a href="http://conference.aises.org/">AISES National Conference</a> in late September.
+                    <br>
+                    <br>
+                    I graduated from <a href="http://www.vanderbilt.edu/">Vanderbilt University</a> in May 2017 with
                     a Bachelors of Science in <a href="https://engineering.vanderbilt.edu/eecs/Undergraduate/index.php">Computer
                     Science</a> and a Bachelor of Arts in <a href="https://as.vanderbilt.edu/math/">Mathematics</a>.
                 </p>
@@ -133,12 +141,16 @@
                         href="http://arxiv.org/abs/1512.02325">Single Shot MultiBox Detector</a>.
                     <br>
                     <br>
-                    I spent last summer interning at <a href="https://www.blackrock.com/">Blackrock</a> working as a <a
+                    I spent last summer interning at <a href="https://www.blackrock.com/">BlackRock</a> working as a <a
                         href="https://www.sitepoint.com/full-stack-developer/">Full-Stack web developer</a>. My <a
                         href="http://rockthecode.io/tag/hackathon/">Hackathon</a> team won the summer competition with
                     an <a href="https://en.wikipedia.org/wiki/Machine_learning">ML</a> system to process <a
                         href="http://blog.aylien.com/structured-vs-unstructured-data-exploring-an/">unstructured
                     data</a> at <a href="https://en.wikipedia.org/wiki/Scalability">scale</a> (like legal documents).
+                    <br>
+                    <br>
+                    I have returned to BlacRock as a full-time Software Engineer on the Core Data team, and
+                    plan to apply to graduate programs to gain research experience in AI & Deep Learning.
                 </p>
                 <a href="#resume" class="btn btn-dark btn-lg"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
             </div>
@@ -152,13 +164,34 @@
 <!-- Callout -->
 <aside id="resume" class="callout resume">
     <div class="text-vertical-center">
-        <h1>And here's my resume.</h1>
         <br>
         <br>
         <br>
-        <a href="data/ELB%20Resume%2020170420.pdf" class="btn btn-lg" target="_blank">
-            <i class="fa fa-download fa-5x"></i>
-        </a>
+        <!--<tr style="display:inline">-->
+            <!--<td><h1>Resume</h1><a href="data/ELB_Resume.pdf" class="btn btn-lg" target="_blank"><i class="fa fa-download fa-5x"></i></a></td>-->
+            <!--<td><h1>CV</h1><a href="data/ELB_CV.pdf" class="btn btn-lg" target="_blank"><i class="fa fa-download fa-5x"></i></a></td>-->
+        <!--</tr>-->
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-block">
+                        <h1 class="card-title">Resume</h1>
+                        <a href="data/ELB_Resume.pdf" class="btn btn-lg" target="_blank">
+                            <i class="fa fa-download fa-5x"></i> </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-block">
+                        <h1 class="card-title">Curriculum <br> Vitae</h1>
+                        <a href="data/ELB_CV.pdf" class="btn btn-lg" target="_blank">
+                            <i class="fa fa-download fa-5x"></i> </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </aside>
 
