--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
             <li><a class="icon" href="http://www.linkedin.com/in/ellislbrownii" target="_blank"
                    data-original-title="LinkedIn"> <i class="fa fa-linkedin fa-3x"></i> </a></li>
             <li><a class="icon" href="https://github.com/ellisbrown" target="_blank"
-                   data-original-title="Github"> <i class="fa fa-github fa-3x"></i> </a></li>
+                   data-original-title="GitHub"> <i class="fa fa-github fa-3x"></i> </a></li>
+            <li><a class="icon" href="http://scholar.google.com/citations?user=Hp5uEnUAAAAJ" target="_blank"
+                   data-original-title="Google Scholar"> <i class="fa fa-graduation-cap fa-3x"></i> </a></li>
             <li><a class="icon" href="mailto:ellis.l.brown.ii@gmail.com" target="_blank" data-toggle="tooltip"
                    data-original-title="Email"> <i class="fa fa-envelope fa-3x"></i> </a></li>
         </ul>
@@ -100,7 +102,7 @@
             <div class="col-xs-2 position">
                 <h3><i class="fa fa-university fa-4x" aria-hidden="true"></i></h3>
             </div>
-            <div class="col-xs-8 text-center">
+            <div class="col-xs-10">
                 <p class="lead">
                     I am a Software Engineer with experience in Research and Open Source development. I am interested in
                     Artificial Intelligence and practical applications of Deep Learning (especially in R&D).
@@ -132,13 +134,14 @@
             <div class="col-xs-2 position">
                 <h3><i class="fa fa-briefcase fa-4x" aria-hidden="true"></i></h3>
             </div>
-            <div class="col-xs-8 text-center">
+            <div class="col-xs-10">
                 <p class="lead">
                     I have worked on <a href="https://opensource.org/definition">open source</a> <a
                         href="https://en.wikipedia.org/wiki/Deep_learning">Deep Learning</a> projects in my free-time
                     this year that have gotten some good recognition — most notably a <b><a
                         href="https://github.com/amdegroot/ssd.pytorch">PyTorch Implementation</a></b> of the <a
-                        href="http://arxiv.org/abs/1512.02325">Single Shot MultiBox Detector</a>.
+                        href="http://arxiv.org/abs/1512.02325">Single Shot MultiBox Detector</a> unified framework for
+                    real-time object detection using a single network.
                     <br>
                     <br>
                     I spent last summer interning at <a href="https://www.blackrock.com/">BlackRock</a> working as a <a
@@ -176,7 +179,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-block">
-                        <h1 class="card-title">Resume</h1>
+                        <h1 class="card-title">Professional<br>Resume</h1>
                         <a href="data/ELB_Resume.pdf" class="btn btn-lg" target="_blank">
                             <i class="fa fa-download fa-5x"></i> </a>
                     </div>
@@ -221,16 +224,16 @@
                 <ul class="list-inline">
                     <li><a class="icon" href="http://www.fb.me/ellis.l.brown.ii" target="_blank"
                            data-original-title="Facebook"> <i class="fa fa-facebook fa-3x"></i> </a></li>
-                    <li><a class="icon" href="http://www.instagram.com/ellisorellis" target="_blank"
-                           data-original-title="Instagram"> <i class="fa fa-instagram fa-3x"></i> </a></li>
                     <li><a class="icon" href="http://twitter.com/ellisorellis" target="_blank"
                            data-original-title="Twitter"> <i class="fa fa-twitter fa-3x"></i> </a></li>
                     <li><a class="icon" href="http://soundcloud.com/langham" target="_blank"
                            data-original-title="SoundCloud"> <i class="fa fa-soundcloud fa-3x"></i> </a></li>
                     <li><a class="icon" href="http://www.linkedin.com/in/ellislbrownii" target="_blank"
                            data-original-title="LinkedIn"> <i class="fa fa-linkedin fa-3x"></i> </a></li>
+                    <li><a class="icon" href="http://scholar.google.com/citations?user=Hp5uEnUAAAAJ" target="_blank"
+                           data-original-title="Google Scholar"> <i class="fa fa-graduation-cap fa-3x"></i> </a></li>
                     <li><a class="icon" href="http://github.com/ellisbrown" target="_blank"
-                           data-original-title="Github"> <i class="fa fa-github fa-3x"></i> </a></li>
+                           data-original-title="GitHub"> <i class="fa fa-github fa-3x"></i> </a></li>
                 </ul>
                 <hr class="small">
                 <p class="lead">Copyright &copy; Ellis L. Brown II, 2017</p>
