--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     Analog Systems Research Lab</a>. I was the lead researcher all Spring on a NSF funded project at the
                     intersection of Cognitive Science and Artificial Intelligence. Since graduation, I have continued work
                     on the project, and am a lead author on our paper being submitted to
-                    <a href="https://aaai.org/Conferences/AAAI/aaai18.php">AAAI-18</a> entitled "A New Computational
+                    <a href="https://aaai.org/Conferences/AAAI/aaai18.php">AAAI-18</a> entitled "A Computational
                     Cognitive Architecture to Model Human Visual Search for Spatiotemporal Targets." In addition, I will
                     give an oral presentation of my research at the
                     <a href="http://conference.aises.org/">AISES National Conference</a> in late September.
