--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     data</a> at <a href="https://en.wikipedia.org/wiki/Scalability">scale</a> (like legal documents).
                     <br>
                     <br>
-                    I have returned to BlacRock as a full-time Software Engineer on the Core Data team, and
+                    I have returned to BlackRock full-time as a Software Engineer on the Core Data team, and
                     plan to apply to graduate programs to gain research experience in AI & Deep Learning.
                 </p>
                 <a href="#resume" class="btn btn-dark btn-lg"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
@@ -205,10 +205,6 @@
             <div class="col-xs-4 col-xs-offset-4 text-center">
                 <h4><strong>Ellis Brown</strong>
                 </h4>
-                <p>PMB 350914
-                    <br>2301 Vanderbilt Pl
-                    <br>Nasvhille, TN 37235</p>
-                <!--</div>-->
                 <!--<div class="col-xs-4 col-xs-offset-5 text-left">-->
                 <ul class="list-unstyled text">
                     <!--<a href="tel:+13147611662"><li><i class="fa fa-phone fa-fw"></i> +1 (314) 761-1662</li></a>-->
