rm fb link on top

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <h3>Software Engineer @ BlackRock | Artificial Intelligence Research @ AIVAS Lab</h3>
         <br>
         <ul class="list-inline social-media">
-            <li><a class="icon" href="http://www.fb.me/ellis.l.brown.ii" target="_blank"
-                   data-original-title="Facebook"> <i class="fa fa-facebook fa-3x"></i> </a></li>
+            <!--li><a class="icon" href="http://www.fb.me/ellis.l.brown.ii" target="_blank"
+                   data-original-title="Facebook"> <i class="fa fa-facebook fa-3x"></i> </a></li-->
             <li><a class="icon" href="https://twitter.com/ellisorellis" target="_blank"
                    data-original-title="Twitter"> <i class="fa fa-twitter fa-3x"></i> </a></li>
             <li><a class="icon" href="http://www.linkedin.com/in/ellislbrownii" target="_blank"
